# storage/api-docs/api-docs.json
@@ -5,6 +5,92 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1/countries": {
+            "get": {
+                "tags": [
+                    "countries"
+                ],
+                "summary": "Display all Countries of Domicile",
+                "description": "Get all countries",
+                "operationId": "countries",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/api/v1/countries/{countryId}": {
+            "get": {
+                "tags": [
+                    "countries"
+                ],
+                "summary": "Country of domicile by id",
+                "description": "Get country by id",
+                "operationId": "countriesById",
+                "parameters": [
+                    {
+                        "name": "countryId",
+                        "in": "path",
+                        "description": "ID of country",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/api/v1/locations": {
+            "get": {
+                "tags": [
+                    "locations"
+                ],
+                "summary": "Display all Location Areas",
+                "description": "Get all location areas",
+                "operationId": "locations",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/api/v1/locations/{locationId}": {
+            "get": {
+                "tags": [
+                    "locations"
+                ],
+                "summary": "Location Area by id",
+                "description": "Get location area by id",
+                "operationId": "locationsById",
+                "parameters": [
+                    {
+                        "name": "locationId",
+                        "in": "path",
+                        "description": "ID of location",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
         "/api/v1/": {
             "get": {
                 "tags": [
